--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,8 @@ body{
 }
 
 
-h1{
-    display: inline-block;
-    margin-left: 39%;
+#titulo{
+    text-align: center;
     font-weight: bold;
     font-size: 60px;
     margin-bottom: 20px;
